[gd_scene load_steps=3 format=3 uid="uid://bdln3dqouxscf"]

[ext_resource type="Script" uid="uid://c7as0dowwu60b" path="res://scenes/craft/work_branch_two_part.gd" id="1_ixyo4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ixyo4"]
bg_color = Color(0.5372615, 0.36961958, 0.15929744, 1)

[node name="WorkBranchTwoPart" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ixyo4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 522.0
offset_bottom = 57.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ixyo4")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.010000001
anchor_bottom = 0.021000002
offset_left = 94.0
offset_top = 6.0
offset_right = 409.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 35
text = "选择物品进行制作："

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 62.0
offset_right = 523.0
offset_bottom = 591.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_top = 62.0
offset_right = 518.0
offset_bottom = 589.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text = "武器"

[node name="Button3" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text = "食物"

[node name="Button2" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text = "医疗"

[node name="Button4" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text = "其他"

[node name="Button5" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text = "VIP升级"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(270, 0)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 35
theme_override_constants/v_separation = 4
columns = 2
